# opencv-lesson

./: CMakeLists.txt  README.md  install.sh  package.xml
cascades/: scottie.xml
cfg/: ColorThreshold.cfg  EdgeParam.cfg  OrangeColSender.cfg
color_config/: orange.yaml  orange2.yaml
launch/: blur.launch  cascade.launch  color.launch  edge.launch  showCam0.launch
src/: blur.cpp  cascade.cpp  color_detect.cpp  edge_detector.cpp  minimum.cpp  orange_col_sender.cpp
