<package format="2">
  <name>opencv3mixing</name>
  <version>0.1.0</version>
  <description>
    This is opencv3mixing.
  </description>
  <maintainer email="tamura.kosei905@mail.kyutech.jp">Tamura kosei</maintainer>
  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/CIRKIT-ARC-1stGrade/opencv3mixing/wiki</url>
  <url type="repository">https://github.com/CIRKIT-ARC-1stGrade/opencv3mixing</url>
  <url type="bugtracker">https://github.com/CIRKIT-ARC-1stGrade/opencv3mixing/issues</url>
  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
